--- a/RunPlanner.Core/packages.config
+++ b/RunPlanner.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+
   <package id="Humanizer" version="1.37.7" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Azure.Mobile.Client" version="2.0.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="2.0.0" targetFramework="portable45-net45+win8+wpa81" />
@@ -9,6 +10,12 @@
   <package id="MvvmCross" version="4.2.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Binding" version="4.2.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Core" version="4.2.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Binding" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Core" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Platform" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Plugin.Location" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.StarterPack" version="4.2.3" targetFramework="portable45-net45+win8+wpa81" />
